display the version of python from inside a local .venv

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -40,3 +40,10 @@ modified = "📝"
 staged = '[++\($count\)](green)'
 renamed = "👅"
 deleted = "🗑"
+
+[python]
+# Display the version of python from inside a local venv.
+#
+# Note this will only work when the venv is inside the project and it will only
+# work in the directory that contains the venv dir but maybe this is ok?
+python_binary = ["./.venv/bin/python", "python3"]
